added other platforms

--- a/my-electron-app/src/Scorecards.css
+++ b/my-electron-app/src/Scorecards.css
@@ -118,3 +118,8 @@
   min-width: 150px; /* ensures responsive container gets width */
   min-height: 150px;
 }
+.github-heatmap-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
