--- a/my-electron-app/components/ProfileStats.css
+++ b/my-electron-app/components/ProfileStats.css
@@ -20,3 +20,21 @@
 @media (max-width: 900px) {
   .charts-grid { grid-template-columns: 1fr; }
 }
+.back-btn {
+  position: fixed;
+  top: 16px;
+  display: flex;
+  align-items: center;
+  font-size: larger;
+  right: 16px;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  cursor: pointer;
+  z-index: 1000;
+}
